# SAIR_Courses

./: .gitignore  README.md  pyproject.toml
0_Python_ML_Foundations/: README.md
1_Regression/: README.md
1_Regression/Regression Capstone Projects/AmSalma/: scaler.pkl
1_Regression/Regression Capstone Projects/Ibrahim_Alhafiz/: full_pipeline.ipynb
2_Classification/: README.md
3_Neural Network from Scrach/DeepPip/: run_pipeline.py
3_Neural Network from Scrach/models/: fashion_mnist_model.pkl  fashion_shallow.pkl  mnist_shallow.pkl  mnist_shallow_fixed.pkl
3_Neural Network from Scrach/results/: dnn_limitations_results.pkl
3_Neural Network from scratch/: .gitignore  README.md  nn.ipynb  nn2.ipynb  nn3.ipynb
3_Neural Network from scratch/DeepPip/: README.md  gradio_app.py  requirements.txt  sample.py  setup.sh
3_Neural Network from scratch/deep-learning-pipeline-lecture3/: .gitignore  README.md  install_cli.sh  install_cli_simple.sh  pyproject.toml  requirements.txt  setup.py
3_Neural Network from scratch/deep-learning-pipeline-lecture3/notebooks/: nn3.ipynb
3_Neural Network from scratch/deep-learning-pipeline-lecture3/scripts/: cli_tools.py  download_data.py  run_pipeline.py  train_model.py
3_Neural Network from scratch/deep-learning-pipeline-lecture3/src/evaluation/: analyzer.py
3_Neural Network from scratch/deep-learning-pipeline-lecture3/src/inference/: ui.py
3_Neural Network from scratch/deep-learning-pipeline-lecture3/src/training/: __init__.py  trainer.py  visualizer.py
3_Neural Network from scratch/deep-learning-pipeline-lecture3/src/utils/: config_loader.py  logger.py
3_Neural Network from scratch/deep-learning-pipeline-lecture3/tests/: test_data.py  test_models.py
3_Neural Network from scratch/nn_capstone_example/: README.md
4_PyTorch/: 1_Intro.ipynb  2_DataLoader.ipynb  README.md  dev.ipynb  lab_2.ipynb
4_PyTorch/Lectures/: 2_DataLoader.ipynb
4_PyTorch/labs/: lab_1.ipynb  lab_2.ipynb
Eithar_Ismail_Submissions/: lab_1.ipynb
Regression/: california_housing_model.pkl  poly_model.pkl
(+19 files in other folders)
